add youtube service

--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,8 @@
 
 # production
 /build
-
+# API KEYs
+.env
 # misc
 .DS_Store
 .env.local
@@ -22,3 +23,5 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+.gitignore
